# libfymd4c

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci-build.yml
cmake/: libfymd4c-config.cmake.in
docs/: renderers.md
fymd4c/: CMakeLists.txt  fymd4c.1  fymd4c.c
include/: libfymd4c.h
include/libfymd4c/: libfymd4c-convert.h  libfymd4c-renderer.h  libfymd4c-util.h
scripts/: gen-wcwidth-wide.py  gen-wcwidth.py  run-tests.py
src/: CMakeLists.txt  libfymd4c.c  libfymd4c.pc.in  md4c-ansi.c  md4c-ansi.h  md4c-heal-wrap.h  md4c-heal.c  md4c-heal.h  md4c-stream.c  md4c-stream.h  md4c-style.c  md4c-style.h  md4c-wcwidth-wide.h  md4c-wcwidth-zero.h
stylings/: md4c-default.yaml
stylings/examples/: README.md  table-alignment.md  table-ascii.yaml  table-basic.md  table-borderless.yaml  table-colored-header.yaml  table-heavy.yaml  table-striped.yaml  table-wrapping.md
stylings/themes/: README.md  catppuccin.yaml  kanagawa.yaml  showcase.md  solarized.yaml  tokyonight.yaml
test/: fenced-api-test.c  fenced-cli-test.py  line-limit-api-test.c  line-limit-test.py  prog.py  render-test.py  spec-latex-math.txt  stream-demo.sh  stream-test.py  style-examples-test.py  theme-catalogue-test.py
